--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 * {
     margin: 0;
     padding: 0;
@@ -6,9 +7,8 @@
     box-sizing: border-box;
 }
 
-.space {
-    width: 100%;
-    background-color: black;
+body {
+    background-color: white;
 }
 
 html {
@@ -46,12 +46,18 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    position: relative;
 }
 
 /* OVERVIEW - NAV BAR CONTAINER */
 #overview nav .navLinkList {
     display: flex;
     gap: 32px;
+}
+
+/* OVERVIEW - NAV BAR CONTAINER */
+#overview nav .hamburgerIconCon {
+    display: none;
 }
 
 /* NAV LINK - "READ 101" */
@@ -106,7 +112,7 @@ body {
     text-decoration: none;
     position: relative;
     width: fit-content;
-    padding: 12px 12px;
+    padding-inline: 12px;
 }
 #overview .content div:nth-child(1) a:after {
     position: absolute;
@@ -195,6 +201,7 @@ body {
     justify-content: center;
     gap: 12px;
     border-radius: 100px;
+    border: none;
     cursor: pointer;
     transition-duration: 0.3s;
 }
@@ -253,19 +260,33 @@ body {
 .buttonCon{
     display: flex;
     justify-content: space-around;
-    align-items: start;
+    align-items: center;
     align-content: start;
 }
 
-.buttonCon button{
+.buttonCon button {
     border-radius: 50%;
+    border: none;
+    cursor: pointer;
+    transition-duration: 0.3s;
 }
 
-#leftButton, #rightButton{
-    border: 25px solid;
-    border-color: white;
-    border-radius: 50%;
+.buttonCon button:active {
+    transform: scale(0.90);
+    transition-duration: 0.3s;
 }
+
+
+#leftButton, #rightButton {
+    aspect-ratio: 1;
+    width: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: black;
+    font-size: 24px;
+}
+
 
 /* THEME */
 #theme {
@@ -273,5 +294,275 @@ body {
     background-position: center;
 }
 
+@media screen and (max-width: 1024px) {
+    #overview .content div:nth-child(1) p {
+        font-size: 120px;
+        line-height: 140px;
+    }
+
+    #overview nav>a:nth-child(1) {
+        font-size: 40px;
+        text-decoration: none;
+    }
+
+    #overview nav .navLinkList a {
+        font-size: 26px;
+        text-decoration: none;
+        position: relative;
+        padding: 8px;
+    }
+
+    #overview .content div:nth-child(2)>p {
+        font-size: 28px;
+        line-height: 50px;
+    }
+
+    #overview .content div:nth-child(2) .ratingCon {
+        align-items: center;
+    }
+
+    #overview .content div:nth-child(2) .ratingCon img {
+        width: 80px;
+        height: 80px;
+    }
+
+    #overview .content div:nth-child(2) .ratingCon>.textCon>p {
+        font-size: 52px;
+    }
+
+    #overview .content div:nth-child(2) button {
+        scale: 0.9;
+    }
+
+    #setting h1, #characterization h1, #theme h1, #plot h1 {
+        font-size: 64px;
+    }
+
+    #setting p, #characterization p, #theme p, #plot p {
+        font-size: 36px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    #overview nav .hamburgerIconCon {
+        display: block;
+        position: relative;
+        z-index: 10;
+    }
+    #overview nav .hamburgerIconCon i {
+        font-size: 24px;
+        transition-duration: 0.3s;
+    }
+    #overview nav .hamburgerIconCon i:active {
+        transform: scale(0.90);
+        transition-duration: 0.3s;
+    }
+
+    #overview nav .navLinkList {
+        display: none;
+    }
+
+    #overview, #setting, #characterization, #plot, #theme {
+        padding-inline: 50px;
+    }
+    
+    #overview .content div:nth-child(1) p {
+        font-size: 90px;
+        line-height: 120px;
+    }
+
+    #overview .content div:nth-child(2)>p {
+        font-size: 24px;
+        line-height: 40px;
+    }
+
+    #overview .content div:nth-child(2) .ratingCon img {
+        width: 60px;
+        height: 60px;
+    }
+
+    #overview .content div:nth-child(2) .ratingCon>.textCon>p {
+        font-size: 40px;
+    }
+
+    .navBarTabView {
+        position: absolute;
+        background-color: white;
+        width: 40%;
+        height: fit-content;
+        top: 0;
+        right: -20px;
+        padding: 16px;
+        padding-top: 15%;
+        display: flex;
+        flex-direction: column;
+        z-index: 2;
+        border-radius: 18px;
+    }
+    .navBarTabView > * {
+        display: block;
+    }
+    .navBarTabView a {
+        color: black;
+        text-decoration: none;
+        font-size: 20px;
+        margin-bottom: 24px;
+        padding: 12px;
+        border-radius: 8px;
+        font-size: 28px;
+    }
+
+    #setting h1, #characterization h1, #theme h1, #plot h1 {
+        font-size: 52px;
+    }
+    
+    #setting p, #characterization p, #theme p, #plot p {
+        font-size: 32px;
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .navBarTabView {
+        width: 80%;
+    }
+
+    #overview nav>a:nth-child(1) {
+        font-size: 32px;
+    }
+
+    #overview nav .hamburgerIconCon i {
+        font-size: 20px;
+    }
+
+    #overview, #setting, #characterization, #plot, #theme {
+        padding: 24px;
+    }
+
+    #overview .content div:nth-child(1) p {
+        font-size: 60px;
+        line-height: 70px;
+    }
+
+    #overview .content div:nth-child(1) a {
+        font-size: 24px;
+        text-decoration: none;
+        position: relative;
+        width: fit-content;
+    }
+
+    #overview .content div:nth-child(2)>p {
+        font-size: 20px;
+        line-height: 30px;
+    }
+
+    #overview .content div:nth-child(2) .ratingCon img {
+        width: 40px;
+        height: 40px;
+    }
+
+    #overview .content div:nth-child(2) .ratingCon>.textCon>p {
+        font-size: 28px;
+    }
+
+    #overview .content div:nth-child(2) .ratingCon .textCon a {
+        font-size: 20px;
+        text-decoration: none;
+        position: relative;
+        width: fit-content;
+        padding-block: 12px;
+    }
+
+    #setting h1, #characterization h1, #theme h1, #plot h1 {
+        font-size: 44px;
+    }
+
+    #setting p, #characterization p, #theme p, #plot p {
+        font-size: 20px;
+    }
+
+    #overview .content div:nth-child(2)>button>p {
+        font-size: 24px;
+    }
+
+    #overview .content div:nth-child(2) button i {
+        font-size: 20px;
+    }
+}
+
+@media screen and (max-width: 375px) {
+    #overview .content div:nth-child(1) p {
+        font-size: 50px;
+        line-height: 60px;
+    }
+
+    #overview .content div:nth-child(1) a {
+        font-size: 20px;
+        padding-inline: 0;
+    }
+
+    #overview .content div:nth-child(2)>button>p {
+        font-size: 17px;
+    }
+
+    #overview .content div:nth-child(2) button i {
+        font-size: 17px;
+    }
+
+    .navBarTabView a {
+        font-size: 24px;
+    }
+
+    #leftButton, #rightButton {
+        font-size: 16px;
+        width: 40px;
+    }
+    
+}
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* ANIMATIONS */
+.navBarTabViewAnimation {
+    animation: navBarTabViewAnimation 0.3s 1;
+}
+@keyframes navBarTabViewAnimation {
+    from {
+        transform: translateX(100px);
+    }
+    to {
+        transform: translateX(0);
+    }
+}
