--- a/style.css
+++ b/style.css
@@ -518,6 +518,31 @@ body {
     }
     
 }
+/* Info */
+#Info{
+    display: flex;
+    justify-content: space-around;
+    padding-inline: 50px;
+    padding-block: 30px;
+    background-color: black ;
+
+}
+
+#leader, #mem1, #mem2, #mem3, #mem4{
+    height: 150px;
+    border-color: black 5px solid;
+    aspect-ratio: 1;
+    border-radius: 50%;
+}
+
+#desc{
+    width: 100%;
+    text-align: center;
+}
+
+.frame{
+    text-align: center  ;
+}
 
 
 
